--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ h2 {
 
 #quote-sec {
 
-    background: url(/food_website/images/bg/bg-2.jpg);
+    background: url(images/bg/bg-2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
